commit 6dd64603e3824595d80b8dc6d9b9591f4a4bc041
Date:   Thu Mar 10 01:31:30 2016 +0200

    Updated tags for 3.6

commit f3b0b472e8e27c0aef8161c5ddbe77a9fc6fe94d
Date:   Wed Mar 9 16:31:36 2016 +0200

    Added @works36 and @broken36 tags to the features

commit 1b0a1a3956da8a582a2ddd0480b8a084fe096489
Date:   Tue Mar 8 21:14:52 2016 +0200

    Added features/trytond/move_template/

commit 84f5171a96b61b780b7947153a4fa251d8b1760f
Date:   Tue Mar 8 17:08:18 2016 +0200

    Added scenario_move_template

commit d72b7d41df1cccb7606eee66b4a3dc4b94a21c99
Date:   Sat Mar 5 00:00:06 2016 +0200

    Fixed documentation

commit 478a7b0591e0d0ced68a1b7c5b050fe7d1ca265d
Date:   Fri Mar 4 23:29:55 2016 +0200

    Fixed documentation to the wiki

commit df1872a43bdffd72f5eb7881f9174be1da0cbc70
Date:   Fri Mar 4 23:14:11 2016 +0200

    Moved the documentation to the wiki

commit ee009f6392b649f42c9f54a5ebdb608f1cd1546d
Date:   Fri Mar 4 23:11:40 2016 +0200

    Moved the documentation to the wiki

commit 806aca1479e9ecb6fc0c154bbd2f3f21b3380a1e
Date:   Fri Mar 4 21:16:06 2016 +0200

    Fixed documentation

commit 8cd2fa8697a2c7933e118ae35aae4a1d2d92396b
Date:   Thu Mar 3 20:06:22 2016 +0200

    mv README.md README.creole

commit 02faac946a4cd231ab9cf3c569159a424f8f7e39
Date:   Wed Mar 2 00:21:36 2016 +0200

    Updated for Tyrton 3.4

commit 5654bc9ce5fbdec3a0d5007a942e02dd014232c1
Date:   Tue Mar 10 18:40:18 2015 +0200

    Minor bugfixes and refactorings.

commit fedc5977e8916ca149cb36dc67a446a2723b677e
Date:   Sat Feb 28 21:54:09 2015 +0200

    Many small improvements for the real world.

commit f48056e2c474cc720fdf275e5eef993b63a6f12b
Date:   Tue Feb 24 16:04:24 2015 +0200

    Added features/steps/scenario_account_payment.py
    to start working on payments.

commit 17ad000d738cd59a683f22d184e07e0e7c7c3bce
Date:   Wed Feb 11 08:12:10 2015 +0200

    Monkey-patched behave to allow for backslash at the end of lines
    in feature files to break up long steps.
