@@ -1,6 +1,28 @@
 From: https://github.com/lampmantech/trytond_scenari/raw/master/features/steps/ir.py
 
 
+From: https://github.com/lampmantech/trytond_scenari/raw/master/features/steps/ir.py
+
+
+   Test the core trytond/ir/ functionalities.
+   1) Try to make an attachment in the form on a link
+
+**ir/attachment test**
+   Try to make an attachment in the form of a link
+   onto the admin user. Not working.
+   FixMe:
+
+**Attach to an instance named "{uName}" of class "{uClass}" the content of this feature file**
+
+**Attach to an instance named "{uName}" of class "{uClass}" a link to an existing file with the following |filename| fields**
+
+**Attach to an instance with field "{uField}" "{uValue}" of class "{uClass}" a link to an existing file with the following |filename| fields**
+   Given     Attach to an existing instance with name "{uName}" of class "{uClass}"     a link to an existing file with the following {{{|filename|}}} fields
+
+**Attach to an instance with field "{uField}" "{uValue}" of class "{uClass}" the content of an existing file with the following |filename| fields**
+   Given     Attach to an existing instance with name "{uName}" of class "{uClass}"     the content of an existing file with the following {{{|filename|}}} fields
+----
+This file is automatically generated from the source code: do not edit.
    Test the core trytond/ir/ functionalities.
    1) Try to make an attachment in the form on a link
 
