@@ -1,6 +1,29 @@
 From: https://github.com/lampmantech/trytond_scenari/raw/master/features/steps/scenario_account_reconciliation.py
 
 
+From: https://github.com/lampmantech/trytond_scenari/raw/master/features/steps/scenario_account_reconciliation.py
+
+
+   ===============================
+   Account Reconciliation Scenario
+   ===============================
+   This is a straight cut-and-paste from
+   trytond_account-2.8.1/tests/scenario_account_reconciliation.rst
+   It should be improved to be more like a Behave BDD.
+
+**T/A/SAR Create Moves for direct reconciliation**
+   Tryton is the only Python project that puts NO documentation in its doctests!
+
+**T/A/SAR Reconcile Lines without writeoff**
+   Tryton is the only Python project that puts NO documentation in its doctests!
+
+**T/A/SAR Create Moves for writeoff reconciliation**
+   Tryton is the only Python project that puts NO documentation in its doctests!
+
+**T/A/SAR Reconcile Lines with writeoff**
+   Tryton is the only Python project that puts NO documentation in its doctests!
+----
+This file is automatically generated from the source code: do not edit.
    ===============================
    Account Reconciliation Scenario
    ===============================
