@@ -4,6 +4,9 @@ From: https://github.com/lampmantech/trytond_scenari/raw/master/features/steps/s
 From: https://github.com/lampmantech/trytond_scenari/raw/master/features/steps/scenario_account_statement.py
 
 
+From: https://github.com/lampmantech/trytond_scenari/raw/master/features/steps/scenario_account_statement.py
+
+
    This is a straight cut-and-paste from
    trytond_account_statement-3.6.0/tests/scenario_account_statement.rst
    It should be improved to be more like a Behave BDD.
@@ -15,6 +18,13 @@ From: https://github.com/lampmantech/trytond_scenari/raw/master/features/steps/s
 **T/SASt Testing amount validation**
 
 **T/SASt Test number of lines validation**
+----
+This file is automatically generated from the source code: do not edit.
+   This is a straight cut-and-paste from
+   trytond_account_statement-3.6.0/tests/scenario_account_statement.rst
+   Unfinished.
+
+**T/SASt Scenario Account Statement**
 ----
 This file is automatically generated from the source code: do not edit.
    This is a straight cut-and-paste from
