@@ -1,6 +1,9 @@
 From: https://github.com/lampmantech/trytond_scenari/raw/master/features/steps/trytond_sale.py
 
 
+From: https://github.com/lampmantech/trytond_scenari/raw/master/features/steps/trytond_sale.py
+
+
 
 **Sale on date "{uDate}" with description "{uDescription}" with their reference "{uRef}" as user named "{uUser}" products to customer "{uCustomer}" with PaymentTerm "{uTerm}" and InvoiceMethod "{uMethod}" with |product|quantity|description| fields**
    Given     Sale on date "TODAY" with description "Description"
@@ -59,6 +62,67 @@ From: https://github.com/lampmantech/trytond_scenari/raw/master/features/steps/t
 **Post customer Invoice for the S. O. with description "{uDescription}" to customer "{uCustomer}"**
    Given     From T/ASAS/SASAS
    Post customer Invoice for the Sales Order with description "uDescription"
+   to customer "uCustomer"
+   Not idempotent.
+----
+This file is automatically generated from the source code: do not edit.
+
+**Sale on date "{uDate}" with description "{uDescription}" with their reference "{uRef}" as user named "{uUser}" products to customer "{uCustomer}" with PaymentTerm "{uTerm}" and InvoiceMethod "{uMethod}" with |product|quantity|description| fields**
+   Given     Sale on date "TODAY" with description "Description"
+   with their reference "uRef"
+   as user named "Sale" products to customer "Customer"
+   with PaymentTerm "Direct" and InvoiceMethod "order"
+   If the quantity is the word comment, the line type is set to comment.
+   with {{{|product|quantity|description|}}} fields
+   | description | quantity | line_description |
+   | product | 2.0      |             |
+   | product | comment  | Comment     |
+   | product | 3.0      |             |
+
+**Sale "{uAct}" on date "{uDate}" the S. O. with description "{uDescription}" as user named "{uUser}" products from customer "{uCustomer}"**
+   Given     Sale "quote" on date "TODAY" the S.O. with description "P. O #1"
+   as user named "Sale" products from customer "Customer"
+
+**Invoice "{uAct}" on date "{uDate}" the S. O. with description "{uDescription}" as user named "{uUser}" products from customer "{uCustomer}"**
+   Given     Invoice "post" on date "TODAY" the S. O. with description "S. O #1"
+   as user named "Account" products from customer "Customer"
+
+**Create a Sale order with description "{uDescription}" in Currency coded "{uCur}" to customer "{uCustomer}" on Date "{uDate}" with |name|value| fields**
+
+**Create a sales order with description "{uDescription}" in Currency coded "{uCur}" to customer "{uCustomer}" on date "{uDate}" with |name|value| fields**
+   Given     Create a sales order with description "{uDescription}" in Currency coded "%(sCur)s" to customer "{uCustomer}" on Date "{uDate}" with fields
+   | name              | value    |
+   | invoice_method    | shipment |
+   | payment_term      | Direct   |
+   | reference         | None     |
+   Idempotent.
+
+**Sell Products on the S. O. with description "{uDescription}" to customer "{uCustomer}" with |description|quantity|unit_price| fields**
+   Sell Products on the S. O. with description "uDescription"     to customer "uCustomer" with quantities
+   | description     | quantity | unit_price |
+   | Product Fixed   | 2.0      | 10.00      |
+   | Product Average | 3.0      | 10.00      |
+   Idempotent.
+
+**Sell Products on the S. O. with description "{uDescription}" to customer "{uCustomer}" with |description|quantity| fields**
+   Given     Sell products on the S. O. with description "uDescription"
+   to customer "uCustomer" with quantities
+   | description     | quantity |
+   | Product Fixed   | 2.0      |
+   | Product Average | 3.0      |
+   Idempotent.
+
+**Validate shipments on "{uDate}" for the S. O. with description "{uDescription}" to customer "{uCustomer}"**
+
+**Ship the products on "{uDate}" of the S. O. with description "{uDescription}" to customer "{uCustomer}"**
+   Ship the products on "{uDate}" of the S. O. with description "{uDescription}"     to customer "{uCustomer}"
+   From: T/ASAS/SASAS
+   NOT idempotent
+
+**Invoice act "post" for the S. O. with description "{uDescription}" to customer "{uCustomer}"**
+
+**Post customer Invoice for the S. O. with description "{uDescription}" to customer "{uCustomer}"**
+   Given     Post customer Invoice for the Sales Order with description "uDescription"
    to customer "uCustomer"
    Not idempotent.
 ----
